--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("station.jpg");
+    background-image: url("yarn.jpeg");
     background-size: cover;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
@@ -25,21 +25,34 @@ button {
     font-weight: bold;
     width: 200px;
     margin-bottom: 5px;
-    border-radius: 5px;
+    border-radius: 8px;
 }
 
 #increment-btn {
     background: darkred;
+    padding-left: 5px;
 }
 
 #save-btn {
     background: darkgreen;
+    padding-right: 5px;
 }
 
 .container{
     align-self: center;
-    background-color: white;
+    background-color: rgb(238, 130, 238, 0.8);
     max-width: 80vh;
     margin: auto;
     padding: 3px;
+    border-radius: 8px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+p{
+    font-weight: bolder;
+    font-size: large;
 }
